fixed codeblock whitespace wrapping

--- a/assets/styles/layouts/article/_code.scss
+++ b/assets/styles/layouts/article/_code.scss
@@ -56,7 +56,7 @@ pre {
     padding: 0;
     font-size: .95rem;
     line-height: 1.5rem;
-    white-space: pre-wrap;
+    white-space: pre;
   }
 }
 
